--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Milei Kart: Carrera Manipuladora</title>
   <link rel="stylesheet" href="css/styles.css">
-  <!-- Se utiliza Phaser 3 desde CDN -->
+  <!-- Phaser 3 desde CDN -->
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
 </head>
 <body>
