--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 <body>
   <div id="game-container"></div>
-  <script src="src/game.js"></script>
+
+  <!-- Archivos JS de escenas y configuración -->
+  <script src="src/scenes/BootScene.js"></script>
+  <script src="src/scenes/IntroScene.js"></script>
+  <script src="src/scenes/MenuScene.js"></script>
+  <script src="src/scenes/TutorialScene.js"></script>
+  <script src="src/scenes/GameScene.js"></script>
+  <script src="src/scenes/PauseScene.js"></script>
+  <script src="src/scenes/EndScene.js"></script>
+
+  <!-- Archivo principal que inicia el juego -->
+  <script src="src/main.js"></script>
 </body>
 </html>
+
